--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="shadow border p-8 w-full max-w-sm mx-auto">
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
     <form>
-        <h2 class="text-2xl font-semibold text-center mb-6">New User Login</h2>
+        <h2 class="text-2xl font-semibold text-center mb-6">User Login</h2>
         <div class="flex flex-col space-y-4">
             <label>Email</label>
             <input
