--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -52,14 +52,14 @@
     </div>
     <div class="flex items-center justify-between">
       <button
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mr-4"
+        class="px-6 py-2 bg-blue-800 text-white rounded-md hover:bg-blue-600"
         type="submit"
         (click)="save()"
       >
         Submit
       </button>
       <button
-        class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        class="px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-800"
         type="button"
         (click)="login()"
       >
